wip: localization file and changed

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,38 @@
 {
-    "title": "Title",
-    "message": "Hello, How are you?"
+    "navTitleHome": "Home",
+    "navTitleFavorite": "Favorite",
+    "navTitleMovie": "Movie",
+    "navTitleProfile": "Profile",
+    "txtChangeLanguage": "Change language",
+    "txtMyTicket": "My Ticket",
+    "txtFavoriteMovies": "Favorite Movies",
+    "txtPaymentHistory": "Payment history",
+    "txtChangePassword": "Change password",
+    "txtFaceIdTouchId": "Face ID / Touch ID",
+    "txtDarkMode": "Dark Mode",
+    "txtHiThree": "Hi, three! 👋",
+    "txtWelcomeBack": "Welcome back",
+    "txtNowPlaying": "Now playing",
+    "txtComingSoon": "Coming soon",
+    "txtPromoDiscount": "Promo & Discount",
+    "txtCelebrities": "Celebrities",
+    "txtMovieNews": "Movie News",
+    "txtSeeAll": "See All",
+    "tabNowPlaying": "Now playing",
+    "tabComingSoon": "Coming soon",
+    "txtWatchTrailer": "Watch trailer",
+    "txtMovieGenre": "Movie genre:",
+    "txtCensorship": "Censorship:",
+    "txtLanguage": "Language:",
+    "txtStoryline": "Storyline",
+    "txtCasts": "Casts",
+    "txtCrews": "Crews",
+    "txtCinema": "Cinema",
+    "txtDiscover": "Discover",
+    "txtSearch": "Search...",
+    "txtReview": "Review",
+    "txtLoadingForServer": "Loading for server...",
+    "txtNoMovie": "No Movie",
+    "txtRetry": "Retry",
+    "txtThisIsErrorMessage": "This is error message!"
 }
