--- a/assets/translations/my.json
+++ b/assets/translations/my.json
@@ -1,4 +1,38 @@
 {
-    "title": "ခေါင်းစဥ်",
-    "message": "ဘာလုပ်နေကြလဲ။ နေကောင်းလား"
+    "navTitleHome": "ပင်မ",
+    "navTitleFavorite": "နှစ်သက်သော",
+    "navTitleMovie": "ရုပ်ရှင်များ",
+    "navTitleProfile": "ပရိုဖိုင်",
+    "txtChangeLanguage": "ဘာသာစကားပြောင်းရန်",
+    "txtMyTicket": "လက်မှတ်များ",
+    "txtFavoriteMovies": "နှစ်သက်သောရုပ်ရှင်များ",
+    "txtPaymentHistory": "ငွေပေးချမှုမှတ်တမ်း",
+    "txtChangePassword": "လျှို့ဝှက်နံပါတ်ပြောင်းလဲရန်",
+    "txtFaceIdTouchId": "လုံခြုံရေး ဆက်တင်များ",
+    "txtDarkMode": "အနက်ရောင်ပုံစံ",
+    "txtHiThree": "မင်္ဂလာပါ။ 👋",
+    "txtWelcomeBack": "ပြန်လည်ကြိုဆိုပါတယ်",
+    "txtNowPlaying": "ရုံတင်နေသောရုပ်ရှင်များ",
+    "txtComingSoon": "မကြာမီထွက်မည့်ရုပ်ရှင်များ",
+    "txtPromoDiscount": "လူကြိုက်များသောရုပ်ရှင်များ",
+    "txtCelebrities": "ရုပ်ရှင်သရုပ်ဆောင်များ",
+    "txtMovieNews": "ခေတ်စားနေသောသတင်းများ",
+    "txtSeeAll": "နောက်ထပ်",
+    "tabNowPlaying": "ရုံတင်ပြသနေသော",
+    "tabComingSoon": "မကြာင်မီလာမည်",
+    "txtWatchTrailer": "ထွေလာကြည့်ရန်",
+    "txtMovieGenre": "ရုပ်ရှင်အမျိုးအစား:",
+    "txtCensorship": "ရုပ်ရှင်ဆင်ဆာ:",
+    "txtLanguage": "ဘာသာစကား:",
+    "txtStoryline": "ဇာတ်လမ်းအကျဥ်း",
+    "txtCasts": "သရုပ်ဆောင်များ",
+    "txtCrews": "ဇာတ်လမ်းပါဝင်သူများ",
+    "txtCinema": "ရုပ်ရှင်ရုံများ",
+    "txtDiscover": "ဇာတ်လမ်းရှာဖွေရန်",
+    "txtSearch": "ရှာရန်...",
+    "txtReview": "လူကြိုက်နှုန်း",
+    "txtLoadingForServer": "ဆာဗာမှ ရယူနေပါပြီ...",
+    "txtNoMovie": "ရုပ်ရှင်များမရှိသေးပါ",
+    "txtRetry": "ထပ်မံကြိုးစားရန်",
+    "txtThisIsErrorMessage": "တစ်ခုခုမှားယွင်းနေပါသည်။"
 }
