flutter release and signConfig

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -10,7 +10,7 @@
     "txtChangePassword": "Change password",
     "txtFaceIdTouchId": "Face ID / Touch ID",
     "txtDarkMode": "Dark Mode",
-    "txtHiThree": "Hi, three! 👋",
+    "txtHiThree": "Hi, there! 👋",
     "txtWelcomeBack": "Welcome back",
     "txtNowPlaying": "Now playing",
     "txtComingSoon": "Coming soon",
